src/test/deca/syntax/valid/provided/perso/classe_complet.deca
class A {
    int x;

    int getX() {
        return x;
    }
}

{
    A obj = new A();
    obj.x = 10;
    println(obj.getX());
}
