src/test/deca/syntax/invalid/provided/perso/mainAVdecl.deca
{
    A m = new A();
}
class A {
    int x;
}